[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/textures/player.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://weapon/watering_can.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/effects/collect.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/effects/death_player.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, -6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/WeaponPosition:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "death"
step = 0.02
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.02 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_respawn"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponPosition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -6.0, -5.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponPosition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -6.0 ]
}

[sub_resource type="AnimationNodeOneShot" id=11]
fadein_time = 0.02
fadeout_time = 0.02
sync = true

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk"

[sub_resource type="AnimationNodeBlendSpace1D" id=4]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeBlendTree" id=5]
graph_offset = Vector2( -109.62, -32.1975 )
nodes/death/node = SubResource( 11 )
nodes/death/position = Vector2( 400, 160 )
nodes/death_anim/node = SubResource( 12 )
nodes/death_anim/position = Vector2( 160, 300 )
nodes/output/position = Vector2( 620, 160 )
nodes/walk/node = SubResource( 4 )
nodes/walk/position = Vector2( 160, 160 )
node_connections = [ "death", 0, "walk", "death", 1, "death_anim", "output", 0, "death" ]

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
hframes = 4
vframes = 2

[node name="WeaponPosition" type="Position2D" parent="Sprite"]
position = Vector2( 9, -6 )

[node name="WateringCan" parent="Sprite/WeaponPosition" instance=ExtResource( 3 )]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 140
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
position = Vector2( -0.5, -6 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/death = SubResource( 10 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/death/active = false
parameters/walk/blend_position = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -96.5356
bus = "Effects"

[node name="CollectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_entered"]
